@@ -3063,7 +3063,14 @@ sub handle_texinfo_helper ($)
   # Handle location of texinfo.tex.
   my $need_texi_file = 0;
   my $texinfodir;
-  if ($options{'cygnus'})
+  if (var ('TEXINFO_TEX'))
+    {
+      # The user defined TEXINFO_TEX so assume he knows what he is
+      # doing.
+      $texinfodir = ('$(srcdir)/'
+		     . dirname (variable_value ('TEXINFO_TEX')));
+    }
+  elsif ($options{'cygnus'})
     {
       $texinfodir = '$(top_srcdir)/../texinfo';
       define_variable ('TEXINFO_TEX', "$texinfodir/texinfo.tex", INTERNAL);
@@ -3073,13 +3080,6 @@ sub handle_texinfo_helper ($)
       $texinfodir = $config_aux_dir;
       define_variable ('TEXINFO_TEX', "$texinfodir/texinfo.tex", INTERNAL);
       $need_texi_file = 2; # so that we require_conf_file later
-    }
-  elsif (var ('TEXINFO_TEX'))
-    {
-      # The user defined TEXINFO_TEX so assume he knows what he is
-      # doing.
-      $texinfodir = ('$(srcdir)/'
-		     . dirname (variable_value ('TEXINFO_TEX')));
     }
   else
     {
