@@ -1,0 +1,64 @@
+#! /bin/sh
+# Copyright (C) 2003  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Automake; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Make sure the user can override TEXINFO_TEX.
+# Report from Tom Tromey.
+
+required='makeinfo tex'
+. ./defs || exit 1
+
+set -e
+
+cat >>configure.in <<END
+AC_CONFIG_AUX_DIR(aux)
+AC_OUTPUT
+END
+
+cat > Makefile.am << 'END'
+TEXINFO_TEX = tex/texinfo.tex
+info_TEXINFOS = main.texi
+sure_it_exists:
+	test -f $(TEXINFO_TEX)
+END
+
+cat > main.texi << 'END'
+\input texinfo
+@setfilename main.info
+@settitle main
+@node Top
+Hello walls.
+@bye
+END
+
+mkdir aux
+mkdir tex
+cp $testsrcdir/../lib/texinfo.tex tex
+
+$ACLOCAL
+$AUTOMAKE --add-missing
+$AUTOCONF
+
+test ! -f texinfo.tex
+test ! -f aux/texinfo.tex
+test -f tex/texinfo.tex
+
+./configure
+$MAKE sure_it_exists
+$MAKE distcheck
