@@ -1,5 +1,13 @@
+2003-08-05  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (handle_texinfo_helper): Use the user definition
+	of TEXINFO_TEX before checking for cygnus or AC_CONFIG_AUX_DIR.
+	* tests/txinfo22.test: New file.
+	* tests/Makefile.am (TESTS): Add txinfo22.test.
+	Report from Tom Tromey.
+
 2003-08-03  Raja R Harinath  <harinath@acm.org>
- 
+
 	* lib/Automake/Variable.pm (@EXPORT): Remove
 	traverse_variable_recursively and
 	require_variables_for_variable.
